--- a/src/components/PDF/HighlightTips/Tips/index.module.less
+++ b/src/components/PDF/HighlightTips/Tips/index.module.less
@@ -14,6 +14,7 @@
     color: #333333;
     text-align: center;
     line-height: 24px;
+    user-select: none;
   }
   .textStyleSelect {
     margin-top: 12px;
