--- a/src/components/PresentationMode/index.module.less
+++ b/src/components/PresentationMode/index.module.less
@@ -20,7 +20,7 @@
   z-index: 98;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
   overflow-y: auto;
 
