--- a/src/pages/DocumentsView/DocumentList/index.module.less
+++ b/src/pages/DocumentsView/DocumentList/index.module.less
@@ -1,12 +1,13 @@
 .container {
   flex: 1;
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px;
+  align-content: flex-start;
   padding: 20px 40px;
   box-sizing: border-box;
   overflow-y: auto;
-  align-content: flex-start;
 }
 
 .empty {
