--- a/src/components/VideoNote/layouts/SlideCardList/index.module.less
+++ b/src/components/VideoNote/layouts/SlideCardList/index.module.less
@@ -79,11 +79,11 @@
 }
 
 .slidesContainer {
-  display: flex;
-  border: 16px solid transparent;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 16px;
-  align-items: flex-start;
-  flex-wrap: wrap;
+  align-content: flex-start;
+  border: 16px solid transparent;
   overflow-y: auto;
   box-sizing: border-box;
 
