--- a/src/pages/ProjectsView/ProjectList/index.module.less
+++ b/src/pages/ProjectsView/ProjectList/index.module.less
@@ -1,7 +1,8 @@
 .projectGrid {
-  display: flex;
-  flex-wrap: wrap;
-  // gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px;
+  align-content: flex-start;
   width: 100%;
 }
 
