--- a/src/pages/WhiteBoardView/WhiteBoardList/index.module.less
+++ b/src/pages/WhiteBoardView/WhiteBoardList/index.module.less
@@ -1,10 +1,11 @@
 .gridContainer {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px 40px 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px;
   align-content: flex-start;
+  padding: 20px 40px 40px;
   overflow-y: auto;
   box-sizing: border-box;
 
