--- a/src/components/VideoNote/layouts/SlideLayout/index.module.less
+++ b/src/components/VideoNote/layouts/SlideLayout/index.module.less
@@ -71,7 +71,7 @@
   .video {
     width: 100%;
     height: auto;
-    max-height: 100%;
+    max-height: 50vh;
     object-fit: contain;
     border-radius: 8px;
   }
