--- a/src/pages/Settings/IntegrationSetting/index.module.less
+++ b/src/pages/Settings/IntegrationSetting/index.module.less
@@ -25,7 +25,7 @@
 }
 
 .appCard {
-  text-align: center;
+  text-align: left;
   height: 100%;
 
   .ant-card-body {
@@ -37,7 +37,6 @@
   width: 48px;
   height: 48px;
   border-radius: 8px;
-  margin-bottom: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
