fix: 若干颜色问题修复

--- a/src/main.less
+++ b/src/main.less
@@ -3,6 +3,7 @@
 
 @import "./themes/dark.less";
 @import "./themes/light.less";
+@import "./node.css";
 
 .app-region-drag {
   -webkit-app-region: drag;
