feat: 日志页面优化

--- a/src/pages/TimeRecordView/TimeRecordList/index.module.less
+++ b/src/pages/TimeRecordView/TimeRecordList/index.module.less
@@ -13,6 +13,7 @@
     overflow-y: auto;
     padding: 0 16px;
     border-bottom: 20px solid transparent;
+    min-height: 0; /* 确保flex子项可以正确收缩 */
     &::-webkit-scrollbar {
       display: none;
     }
