--- a/src/pages/GoalView/index.module.less
+++ b/src/pages/GoalView/index.module.less
@@ -222,14 +222,14 @@ html[data-theme="dark"] {
     }
 
     .goalList {
-      padding: 0 24px 16px 24px;
+      padding: 16px 24px;
       display: flex;
       flex-direction: column;
       gap: 12px;
     }
 
     .sectionActions {
-      padding: 0 24px 12px 24px;
+      padding: 12px 24px;
 
       .addGoalButton {
         width: 100%;
