--- a/src/main.less
+++ b/src/main.less
@@ -134,6 +134,10 @@ code {
   -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+&::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
 [class*="ant-"] {
   font-family: var(--font) !important;
 }
