--- a/src/pages/ArticleDetailView/index.module.less
+++ b/src/pages/ArticleDetailView/index.module.less
@@ -53,14 +53,11 @@
 }
 
 .simpleArticleListContainer {
-  flex-shrink: 0;
-  width: 300px;
   height: 100%;
-  overflow-y: auto;
-  transition: width 0.3s ease;
+  overflow: hidden;
 
-  &.hide {
-    width: 0;
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
 
