feat: 设置窗口修改为 Modal，白板演示序列视口实时计算

--- a/src/layouts/ContentLayout/components/Search/index.module.less
+++ b/src/layouts/ContentLayout/components/Search/index.module.less
@@ -21,21 +21,22 @@
     background: rgba(17, 25, 39, 0.8);
 
     &.dark {
-      background: rgba(17, 25, 39, 0.95);
+      background: rgba(17, 25, 39, 0.4);
     }
   }
 
   .panel {
     position: absolute;
-    width: 540px;
+    width: 640px;
     max-height: 80vh;
-    top: 50%;
+    max-width: 80vw;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
 
     &.dark {
-      background-color: rgba(10, 8, 23, 0.95);
+      background-color: rgba(49, 49, 52, 0.95);
     }
 
     box-shadow:
