--- a/src/layouts/ContentLayout/index.module.less
+++ b/src/layouts/ContentLayout/index.module.less
@@ -27,6 +27,7 @@
 
     .mainContent {
       flex: 1;
+      min-width: 0;
       max-width: 100%;
       height: 100%;
       box-sizing: border-box;
