--- a/src/pages/WhiteboardDetailView/index.module.less
+++ b/src/pages/WhiteboardDetailView/index.module.less
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: var(--primary-bg-color);
+  background-color: var(--main-bg-color);
 }
 
 .titlebar {
