fix: 图片导出颜色问题，标题去掉前面的 indicator

--- a/src/components/Editor/index.module.less
+++ b/src/components/Editor/index.module.less
@@ -1,8 +1,11 @@
 .editor {
+  color: var(--text-normal);
   --selection-color: #d9f0ff;
+  --text-normal: black;
 
   &.dark {
     --selection-color: #182f3f;
+    --text-normal: rgba(255, 255, 255, 0.9);
   }
 
   ::selection {
