--- a/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
+++ b/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
@@ -17,7 +17,8 @@
       position: absolute;
       content: counter(item) ".";
       width: 2em;
-      height: 1em;
+      height: 1.5em;
+      line-height: 1.5em;
       left: -1.5em;
       top: 0.1em;
     }
