--- a/src/components/WhiteBoard/components/AttributeSetter/FrameSetter/index.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/FrameSetter/index.module.less
@@ -28,6 +28,10 @@
   border-radius: 8px;
   box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.08);
   min-width: unset;
+  &.dark {
+    background: #000;
+    box-shadow: 0 4px 24px 0 rgba(255, 255, 255, 0.08);
+  }
 }
 
 .styleGrid {
@@ -41,8 +45,15 @@
   height: 16px;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.05);
+  &.dark {
+    border: 1px solid rgba(255, 255, 255, 0.05);
+  }
   cursor: pointer;
   transition: all 0.2s;
   position: relative;
   background: #fff;
+  &.dark {
+    background: #000;
+    box-shadow: 0 4px 24px 0 rgba(255, 255, 255, 0.08);
+  }
 }
