--- a/src/components/WhiteBoard/components/AttributeSetter/GeometrySetter/setters/setters.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/GeometrySetter/setters/setters.module.less
@@ -38,7 +38,6 @@
   flex-direction: row;
   gap: 0.5em;
   padding: 0.5em;
-  color: #000;
 }
 
 .modernSketchOptions {
@@ -46,7 +45,12 @@
   flex-direction: column;
   gap: 0.5em;
   padding: 0.5em;
-  color: #2c3e50;
+
+  &.dark {
+    .header {
+      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+    }
+  }
 }
 
 .header {
@@ -59,7 +63,6 @@
   .title {
     font-size: 14px;
     font-weight: 500;
-    color: #2c3e50;
   }
 }
 
@@ -94,7 +97,6 @@
 
   .controlLabel {
     font-size: 12px;
-    color: #64748b;
     font-weight: 500;
   }
 }
@@ -162,7 +164,7 @@
 
   .styleLabel {
     font-size: 12px;
-    color: #2c3e50;
+    // color: #2c3e50;
     text-align: center;
   }
 }
@@ -173,6 +175,25 @@
   height: 1.5em;
   padding: 0.5em 0;
   cursor: pointer;
+
+  &.dark {
+    // .sliderTrack {
+    //   background: #f1f1b1;
+    // }
+
+    .sliderFill {
+      background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4);
+    }
+
+    .sliderHandle {
+      background: #f1e8e8;
+      border-color: #b5d2ef;
+      &:hover {
+        background: #f1e8e8;
+        border-color: #b5d2ef;
+      }
+    }
+  }
 
   .sliderTrack {
     position: absolute;
