--- a/src/components/WhiteBoard/components/AttributeSetter/ImageSetter/index.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/ImageSetter/index.module.less
@@ -41,6 +41,20 @@
   background: #fff;
   border-radius: 8px;
   padding: 8px;
+  &.dark {
+    background: #000;
+    color: #fff;
+    box-shadow: 0 4px 24px 0 rgba(255, 255, 255, 0.08);
+    .positionItem {
+      color: #fff;
+    }
+    .alignItem {
+      color: #fff;
+    }
+    .fontSizeItem {
+      color: #fff;
+    }
+  }
 }
 
 .positionItem,
@@ -76,6 +90,14 @@
   background: #fff;
   border-radius: 8px;
   padding: 12px 0;
+
+  &.dark {
+    background: #000;
+    color: #fff;
+    .colorItem {
+      border: 1px solid rgba(255, 255, 255, 0.05);
+    }
+  }
 
   .colorItem {
     width: 16px;
