--- a/src/components/WhiteBoard/components/AttributeSetter/RichTextSetter/index.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/RichTextSetter/index.module.less
@@ -10,6 +10,13 @@
   background: #fff;
   border-radius: 8px;
   padding: 12px 0;
+  &.dark {
+    background: #000;
+    color: #fff;
+    .colorItem {
+      border: 1px solid rgba(255, 255, 255, 0.05);
+    }
+  }
   .colorItem {
     width: 16px;
     height: 16px;
