--- a/src/components/WhiteBoard/components/StatusBar/index.module.less
+++ b/src/components/WhiteBoard/components/StatusBar/index.module.less
@@ -14,6 +14,11 @@
   display: flex;
   align-items: center;
   gap: 1em;
+  &.dark {
+    color: #fff;
+    background: #000;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  }
 }
 
 .zoomPopover {
